--- a/canceled.html
+++ b/canceled.html
@@ -1,3 +1,10 @@
+<div class="container">
+  <h1>Payment canceled</h1>
+
+  <p></p>
+</div>
+
+
 <!-- Load Stripe.js on your website. -->
 <script src="https://js.stripe.com/v3"></script>
 
